--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
-# Compiled class file
-*.class
+# IDE配置文件
+.idea/
+*.iml
+.vscode/
 
-# Log file
+# Office文件
+~$*
+*.tmp
+*.docx
+*.doc
+*.pptx
+*.xlsx
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# 日志文件
 *.log
 
-# BlueJ files
-*.ctxt
+# 依赖目录
+node_modules/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# 构建输出
+target/
+build/
+dist/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# 环境配置文件
+.env
+.env.local
+.env.production
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# 数据库文件
+*.db
+*.sqlite
+
+# 备份文件
+*.bak
+*.backup
