--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,6 +79,21 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- MyBatis-Plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.4</version>
+        </dependency>
+
+        <!-- MyBatis-Plus 代码生成器（可选，用于自动生成代码） -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.4</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
