--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.4</version>
+            <version>3.5.7</version>
         </dependency>
 
         <!-- MyBatis-Plus 代码生成器（可选，用于自动生成代码） -->
@@ -91,6 +91,13 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.5.4</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- H2 数据库（用于测试） -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
 
