用户管理模块可运行版本

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+  sql:
+    init:
+      mode: never
 
 # MyBatis-Plus配置
 mybatis-plus:
